force-app/main/default/objects/CampaignRule__c/CampaignRule__c.object-meta.xml
<CustomObject>
    <description>Objeto que irá armazenar os produtos alvo da campanha.</description>
    
    <label>Regra de Campanha</label>
    <nameField>
        <displayFormat>REGRA-{00000}</displayFormat>
        <label>Nome de Regras de Campanha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de Campanhas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>