force-app/main/default/objects/CampaignRule__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Regras de Campanhas</relationshipLabel>
    <relationshipName>Regras_de_Campanhas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>