force-app/main/default/objects/CampaignRule__c/fields/CampaignProductName__c.field-meta.xml
<CustomField>
    <fullName>CampaignProductName__c</fullName>
    <description>Campo que armazena o nome do produto.</description>
    <formula>CampaignProduct__r.Name</formula>
    <inlineHelpText>Campo que armazena o nome do produto.</inlineHelpText>
    <label>Nome do Produto</label>
    <type>Text</type>
</CustomField>