force-app/main/default/objects/CampaignRule__c/fields/CampaignTargetRule__c.field-meta.xml
<CustomField>
    <fullName>CampaignTargetRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Público Alvo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CampaignTargetAudience__c.Campaign__c</field>
            <operation>equals</operation>
            <valueField>$Source.Campaign__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CampaignTargetAudience__c</referenceTo>
    <relationshipLabel>Regras de Campanhas</relationshipLabel>
    <relationshipName>Regras_de_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>