force-app/main/default/objects/CampaignRule__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Desconto aplicado em %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>