force-app/main/default/objects/CampaignRule__c/fields/FixedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>FixedUnitPrice__c</fullName>
    <label>Preço fixo do Produto Ativador</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>