force-app/main/default/objects/CampaignRule__c/fields/MaximumOrderValue__c.field-meta.xml
<CustomField>
    <fullName>MaximumOrderValue__c</fullName>
    <label>Valor Maximo do Pedido</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>