force-app/main/default/objects/CampaignRule__c/fields/MaximumQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaximumQuantity__c</fullName>
    <label>Quantidade Máxima</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>