force-app/main/default/objects/CampaignRule__c/fields/MinimumOrderValue__c.field-meta.xml
<CustomField>
    <fullName>MinimumOrderValue__c</fullName>
    <label>Valor Mínimo do Pedido</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>