force-app/main/default/objects/CampaignRule__c/fields/MinimumQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinimumQuantity__c</fullName>
    <label>Quantidade Mínima</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>