force-app/main/default/objects/CampaignRule__c/fields/OrderDiscount__c.field-meta.xml
<CustomField>
    <fullName>OrderDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso este campo esteja marcado, o desconto será aplicado a todos os produtos do pedido e não só aos produtos da campanha.</description>
    <inlineHelpText>Caso este campo esteja marcado, o desconto será aplicado a todos os produtos do pedido e não só aos produtos da campanha.</inlineHelpText>
    <label>Desconto aplicado no Pedido?</label>
    <type>Checkbox</type>
</CustomField>