force-app/main/default/objects/CampaignRule__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Regras de Campanhas</relationshipLabel>
    <relationshipName>Regras_de_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>