force-app/main/default/objects/CampaignRule__c/fields/ProductPercent__c.field-meta.xml
<CustomField>
    <fullName>ProductPercent__c</fullName>
    <label>% dos produtos utilizados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>