force-app/main/default/objects/CampaignRule__c/recordTypes/PaymentDate.recordType-meta.xml
<RecordType>
    <fullName>PaymentDate</fullName>
    <active>true</active>
    <description>Vincula a liberação de desconto no pedido ou produto conforme a Data de Pagamento estipulada na campanha. Pedido com data de pagamento ATÉ data XX/XX/XXX</description>
    <label>Data de pagamento</label>
</RecordType>