force-app/main/default/objects/CampaignRule__c/recordTypes/ProductMix.recordType-meta.xml
<RecordType>
    <fullName>ProductMix</fullName>
    <active>true</active>
    <description>Com base nos produtos definidos na campanha, libera-se desconto conforme o conjunto de produtos definido. Exemplo:  Campanha contém 10 itens cadastrados mas se  no pedido for vendido 3 itens em conjunto, aplicar 5% de desconto</description>
    <label>Mix de Produtos</label>
</RecordType>