force-app/main/default/objects/CampaignRule__c/recordTypes/QuantityCampaign.recordType-meta.xml
<RecordType>
    <fullName>QuantityCampaign</fullName>
    <active>true</active>
    <description>Conforme o volume mínimo e máximo do produto para venda na campanha, é liberado um desconto com base na quantidade vendida. Exemplo: Se forem vendido Qtde entre  50 e 100 unidades deste produto, aplicar um desconto de 5%</description>
    <label>Campanha por Quantidade</label>
</RecordType>