force-app/main/default/objects/CampaignRule__c/recordTypes/VariableConstraints.recordType-meta.xml
<RecordType>
    <fullName>VariableConstraints</fullName>
    <active>true</active>
    <description>Campanha pode ser por: a) Preço Fixo de produto; b) % de desconto por valor do pedido, e ; c) – % de Valor de produto Ativador</description>
    <label>Condicionantes Váriaveis</label>
</RecordType>