force-app/main/default/objects/CampaignRule__c/validationRules/FixedPriceAppliedToAllProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>FixedPriceAppliedToAllProducts</fullName>
    <active>true</active>
    <description>Preço Fixo aplicado em todos os produtos</description>
    <errorConditionFormula>AND(
NOT ISBLANK(FixedUnitPrice__c),
OrderDiscount__c = True
)</errorConditionFormula>
    <errorMessage>Não é possível aplicar um preço fixo para o pedido todo</errorMessage>
</ValidationRule>