force-app/main/default/objects/CampaignRule__c/validationRules/PrecoFixoMoedaAmbas.validationRule-meta.xml
<ValidationRule>
    <fullName>PrecoFixoMoedaAmbas</fullName>
    <active>true</active>
    <description>Não deve ser permitido preencher o registro com Moeda &quot;Ambas&quot; e Preço Fixo</description>
    <errorConditionFormula>AND(  ISPICKVAL(   Campaign__r.Currency__c    , &quot;ALL&quot; ) , NOT  ISBLANK(  FixedUnitPrice__c  ) )</errorConditionFormula>
    <errorMessage>O Campo Preço Fixo do Produto Ativador não deve estar preenchido quando a Campanha possui o Campo Moeda preenchido como &quot;Todas&quot;</errorMessage>
</ValidationRule>